--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
+
+.app {  
+  width: 100vw;
+  min-height: 94vh;
+  padding: 0 3vh 0 3vh;
+  background:white;
+  position: relative;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.light{
+  color : black
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.dark{
+  color : white
+}
+
+.billpayment{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  z-index: 100 !important;
+  margin: 0 !important;
+  width: 97% !important;
+}
+
+.select_show{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  z-index: 50 !important;
+  margin: 0 !important;
+  width: 97% !important;
+}
+
+@media screen and (max-width : 600px) {
+  .billpayment{
+    width: 87.5% !important;
+  }
+
+  .select_show{
+    width: 87.5% !important;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
