--- a/src/components/Notification.css
+++ b/src/components/Notification.css
@@ -19,3 +19,9 @@
         transform: translateY(0);
     }
 }
+
+@media screen and (max-width:600px) {
+    .notification{
+        width: 75%;
+    }
+}
